--- a/index.html
+++ b/index.html
@@ -152,9 +152,8 @@
         <section class="features">
           <h2 class="hidden">Услуги</h2>
           <ul class="features-list">
-            <li class="feature-item">
+            <li class="feature-item feature-new">
               <h3>Материалы</h3>
-              <p class="new-product new-promo uppercase">new</p>
               <svg
                 aria-hidden="true"
                 width="44"
@@ -381,8 +380,8 @@
           <section class="popular-goods">
             <div class="popular-wrapper">
               <h2 class="uppercase">Популярные товары:</h2>
-              <a class="main-button all-popular-goods-btn" href="#"
-                >ВСЕ ПОПУЛЯРНЫЕ ТОВАРЫ</a
+              <a class="main-button all-popular-goods-btn uppercase" href="#"
+                >Все популярные товары</a
               >
             </div>
             <div class="all-product-cards main">
@@ -413,9 +412,8 @@
                   </button>
                 </div>
               </article>
-              <article class="product-card main">
+              <article class="product-card main item-new">
                 <h3>Перфоратор BOSCH BFG 3000</h3>
-                <p class="new-product new-popular uppercase">new</p>
 
                 <img
                   class="product-card-image bfg3000"
@@ -471,7 +469,6 @@
               </article>
               <article class="product-card main item-new">
                 <h3>Перфоратор BOSCH BFG 2000</h3>
-                <!--<p class="new-product new-popular uppercase">new</p>-->
 
                 <img
                   class="product-card-image bfg2000"
