--- a/catalog.html
+++ b/catalog.html
@@ -274,6 +274,7 @@
                   type="checkbox"
                   name="checkbox"
                   value="interscol"
+                  disabled
                 />
                 <label for="checkbox-2" class="uppercase">Интерскол</label>
                 <input
@@ -430,9 +431,8 @@
                   </button>
                 </div>
               </article>
-              <article class="product-card catalog">
+              <article class="product-card catalog item-new">
                 <h3>Перфоратор BOSCH BFG 6000</h3>
-                <p class="new-product new-popular uppercase">new</p>
                 <img
                   class="product-card-image bfg6000"
                   src="img/items-bfg6000.jpg"
@@ -457,9 +457,8 @@
                   </button>
                 </div>
               </article>
-              <article class="product-card catalog">
+              <article class="product-card catalog item-new">
                 <h3>Перфоратор BOSCH BFG 3000</h3>
-                <p class="new-product new-popular uppercase">new</p>
 
                 <img
                   class="product-card-image bfg3000"
@@ -511,9 +510,8 @@
                   </button>
                 </div>
               </article>
-              <article class="product-card catalog">
+              <article class="product-card catalog item-new">
                 <h3>Перфоратор BOSCH BFG 2000</h3>
-                <p class="new-product new-popular uppercase">new</p>
                 <img
                   class="product-card-image bfg2000"
                   src="img/items-bfg2000.jpg"
@@ -537,9 +535,8 @@
                   </button>
                 </div>
               </article>
-              <article class="product-card catalog">
+              <article class="product-card catalog item-new">
                 <h3>Перфоратор BOSCH BFG 3000</h3>
-                <p class="new-product new-popular uppercase">new</p>
                 <img
                   class="product-card-image bfg3000"
                   src="img/items-bfg3000.jpg"
@@ -590,8 +587,7 @@
                   </button>
                 </div>
               </article>
-              <article class="product-card catalog">
-                <p class="new-product new-popular uppercase">new</p>
+              <article class="product-card catalog item-new">
                 <h3>Перфоратор BOSCH BFG 2000</h3>
                 <img
                   class="product-card-image bfg2000"
