--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Техномарт</title>
     <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/style.min.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link rel="icon" href="favicon.ico" />
     <link rel="icon" href="img/icon.svg" type="image/svg+xml" />
     <link rel="apple-touch-icon" href="img/180.png" />
@@ -274,7 +274,7 @@
                   type="checkbox"
                   name="checkbox"
                   value="interscol"
-                  disabled
+                  
                 />
                 <label for="checkbox-2" class="uppercase">Интерскол</label>
                 <input
@@ -320,6 +320,7 @@
                   type="radio"
                   name="radiogroup"
                   value="mains"
+                  
                 />
                 <label for="radio-2" class="uppercase">Сетевые</label>
               </fieldset>
@@ -431,7 +432,7 @@
                   </button>
                 </div>
               </article>
-              <article class="product-card catalog item-new">
+              <article class="item-new product-card catalog">
                 <h3>Перфоратор BOSCH BFG 6000</h3>
                 <img
                   class="product-card-image bfg6000"
