--- a/catalog.html
+++ b/catalog.html
@@ -274,7 +274,6 @@
                   type="checkbox"
                   name="checkbox"
                   value="interscol"
-                  
                 />
                 <label for="checkbox-2" class="uppercase">Интерскол</label>
                 <input
@@ -320,7 +319,6 @@
                   type="radio"
                   name="radiogroup"
                   value="mains"
-                  
                 />
                 <label for="radio-2" class="uppercase">Сетевые</label>
               </fieldset>
@@ -708,7 +706,11 @@
       <div class="footer-1-wrapper">
         <div class="footer-1">
           <div class="footer-nav-1">
-            <a class="footer-logo" href="index.html" title="Логотип Техномарт"></a>
+            <a
+              class="footer-logo"
+              href="index.html"
+              title="Логотип Техномарт"
+            ></a>
 
             <ul class="footer-nav-list">
               <li class="footer-nav-item">
