--- a/catalog.html
+++ b/catalog.html
@@ -14,9 +14,8 @@
     <header>
       <div class="upper-bar-wrapper">
         <div class="upper-bar">
+          <div class="logo-search">
           <a href="index.html" class="logo" title="Логотип Техномарт"></a>
-
-          <div class="upper-bar-options">
             <div class="search-form-container">
               <form
                 class="search-field"
@@ -55,6 +54,7 @@
                 </label>
               </form>
             </div>
+            
             <div class="header-buttons">
               <a class="header-btn-bookmarks catalog" href="#"
                 ><svg
