--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <header class="main-header">
       <div class="upper-bar-wrapper">
         <div class="upper-bar">
+          <div class="logo-search">
           <a href="#" class="logo" title="Логотип Техномарт"></a>
 
           <div class="upper-bar-options">
@@ -55,6 +56,7 @@
                 </label>
               </form>
             </div>
+          </div>
 
             <div class="header-buttons">
               <a class="header-btn-bookmarks" href="#"
