--- a/catalog.html
+++ b/catalog.html
@@ -33,7 +33,6 @@
                 >
                   <g opacity="0.3">
                     <path
-                      class="upper-icons"
                       fill-rule="evenodd"
                       clip-rule="evenodd"
                       d="M13.458 12.044L17 15.586L15.586 17L12.044 13.458C10.782 14.421 9.21 15 7.5 15C3.35786 15 0 11.6421 0 7.5C0 3.35786 3.35786 0 7.5 0C11.6421 0 15 3.35786 15 7.5C15.0001 9.14309 14.4581 10.7403 13.458 12.044ZM7.5 2C4.467 2 2 4.467 2 7.5C2.00331 10.5362 4.4638 12.9967 7.5 13C10.532 13 13 10.532 13 7.5C13 4.467 10.532 2 7.5 2Z"
@@ -57,19 +56,6 @@
             
             <div class="header-buttons">
               <a class="header-btn-bookmarks catalog" href="#"
-                ><svg
-                  width="14"
-                  height="16"
-                  viewBox="0 0 14 16"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <g opacity="0.3">
-                    <path
-                      d="M14 15C14 15.55 13.632 15.741 13.182 15.426L7.819 11.661C7.369 11.346 6.632 11.346 6.182 11.661L0.818 15.426C0.368 15.741 0 15.55 0 15V1C0 0.45 0.45 0 1 0H13C13.55 0 14 0.45 14 1V15Z"
-                      fill="white"
-                    />
-                  </g></svg
                 >Закладки: <span>0</span></a
               >
               <a class="header-btn-cart-full" href="#"
@@ -433,7 +419,7 @@
                   </button>
                 </div>
               </article>
-              <article class="item-new product-card catalog">
+              <article class="new product-card catalog">
                 <h3>Перфоратор BOSCH BFG 6000</h3>
                 <img
                   class="product-card-image bfg6000"
@@ -459,7 +445,7 @@
                   </button>
                 </div>
               </article>
-              <article class="product-card catalog item-new">
+              <article class="product-card catalog new">
                 <h3>Перфоратор BOSCH BFG 3000</h3>
 
                 <img
@@ -512,7 +498,7 @@
                   </button>
                 </div>
               </article>
-              <article class="product-card catalog item-new">
+              <article class="product-card catalog new">
                 <h3>Перфоратор BOSCH BFG 2000</h3>
                 <img
                   class="product-card-image bfg2000"
@@ -537,7 +523,7 @@
                   </button>
                 </div>
               </article>
-              <article class="product-card catalog item-new">
+              <article class="product-card catalog new">
                 <h3>Перфоратор BOSCH BFG 3000</h3>
                 <img
                   class="product-card-image bfg3000"
@@ -622,14 +608,14 @@
         <ul class="paginator">
           <li>
             <a
-              class="paginator-link paginator-link1 active-page"
+              class="paginator-link active-page"
               aria-label="Перейти на текущую страницу каталога"
               >1</a
             >
           </li>
           <li>
             <a
-              class="paginator-link paginator-link2"
+              class="paginator-link"
               href="#"
               aria-label="Перейти на вторую страницу каталога"
               >2</a
@@ -637,7 +623,7 @@
           </li>
           <li>
             <a
-              class="paginator-link paginator-link3"
+              class="paginator-link"
               href="#"
               aria-label="Перейти на третью страницу каталога"
               >3</a
@@ -645,7 +631,7 @@
           </li>
           <li>
             <a
-              class="paginator-link paginator-link-next next uppercase"
+              class="paginator-link next uppercase"
               href="#"
               aria-label="Перейти на следующую страницу каталога"
               >Следующая</a
