--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Техномарт</title>
     <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.min.css" />
     <link rel="icon" href="favicon.ico" />
     <link rel="icon" href="img/icon.svg" type="image/svg+xml" />
     <link rel="apple-touch-icon" href="img/180.png" />
@@ -15,59 +15,58 @@
       <div class="upper-bar-wrapper">
         <div class="upper-bar">
           <div class="logo-search">
-          <a href="#" class="logo" title="Логотип Техномарт"></a>
+            <a href="#" class="logo" title="Логотип Техномарт"></a>
 
-      
-          <div class="search-form-container">
-            <form
-              class="search-field"
-              action="https://echo.htmlacademy.ru"
-              method="POST"
-            >
-              <svg
-                aria-hidden="true"
-                focusable="false"
-                width="17"
-                height="17"
-                viewBox="0 0 17 17"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
+            <div class="search-form-container">
+              <form
+                class="search-field"
+                action="https://echo.htmlacademy.ru"
+                method="POST"
               >
-                <g opacity="0.3">
-                  <path
-                    fill-rule="evenodd"
-                    clip-rule="evenodd"
-                    d="M13.458 12.044L17 15.586L15.586 17L12.044 13.458C10.782 14.421 9.21 15 7.5 15C3.35786 15 0 11.6421 0 7.5C0 3.35786 3.35786 0 7.5 0C11.6421 0 15 3.35786 15 7.5C15.0001 9.14309 14.4581 10.7403 13.458 12.044ZM7.5 2C4.467 2 2 4.467 2 7.5C2.00331 10.5362 4.4638 12.9967 7.5 13C10.532 13 13 10.532 13 7.5C13 4.467 10.532 2 7.5 2Z"
-                    fill="white"
+                <svg
+                  aria-hidden="true"
+                  focusable="false"
+                  width="17"
+                  height="17"
+                  viewBox="0 0 17 17"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <g opacity="0.3">
+                    <path
+                      fill-rule="evenodd"
+                      clip-rule="evenodd"
+                      d="M13.458 12.044L17 15.586L15.586 17L12.044 13.458C10.782 14.421 9.21 15 7.5 15C3.35786 15 0 11.6421 0 7.5C0 3.35786 3.35786 0 7.5 0C11.6421 0 15 3.35786 15 7.5C15.0001 9.14309 14.4581 10.7403 13.458 12.044ZM7.5 2C4.467 2 2 4.467 2 7.5C2.00331 10.5362 4.4638 12.9967 7.5 13C10.532 13 13 10.532 13 7.5C13 4.467 10.532 2 7.5 2Z"
+                      fill="white"
+                    />
+                  </g>
+                </svg>
+                <label>
+                  <input
+                    class="search-window"
+                    id="search-field"
+                    type="search"
+                    name="search"
+                    placeholder="Поиск:"
+                    aria-label="Форма поиска по сайту"
+                    autocomplete="off"
                   />
-                </g>
-              </svg>
-              <label>
-                <input
-                  class="search-window"
-                  id="search-field"
-                  type="search"
-                  name="search"
-                  placeholder="Поиск:"
-                  aria-label="Форма поиска по сайту"
-                  autocomplete="off"
-                />
-              </label>
-            </form>
-          </div>
-          </div>
-            <div class="header-buttons">
-              <a class="header-btn-bookmarks" href="#"
-                >Закладки: <span>0</span></a
-              >
-              <a class="header-btn-cart" href="#"
-                >Корзина: <span class="goods-in-cart">0</span></a
-              >
-              <a class="header-btn-order" href="#">Оформить заказ</a>
+                </label>
+              </form>
             </div>
+          </div>
+          <div class="header-buttons">
+            <a class="header-btn-bookmarks" href="#"
+              >Закладки: <span>0</span></a
+            >
+            <a class="header-btn-cart" href="#"
+              >Корзина: <span class="goods-in-cart">0</span></a
+            >
+            <a class="header-btn-order" href="#">Оформить заказ</a>
           </div>
         </div>
       </div>
+
       <div class="main-bar">
         <div class="mid-header">
           <h1 class="main-header-description">
@@ -971,6 +970,6 @@
         </div>
       </div>
     </footer>
-    <script src="js/script.js"></script>
+    <script src="js/script.min.js"></script>
   </body>
 </html>
